# TestStaticIntoSharedLinking

./: CMakeLists.txt
dynamic_lib/: CMakeLists.txt  SharedHello.cpp  SharedHello.h
static_lib1/: CMakeLists.txt  Hello1.cpp  Hello1.h
static_lib2/: CMakeLists.txt  Hello2.cpp  Hello2.h
